# palpation

./: .gitignore  15_deep_line_005.csv  15_deep_line_006.csv  15_deep_line_007.csv  15_deep_line_008.csv  15_li_withcap_001.csv  README.md  flat_palpation_grid_001.csv  flat_palpation_grid_002.csv  flat_palpation_grid_003_center.csv  ik_grid_001.csv  ik_line_001.csv  ik_test.csv  joint_calibration_15mm_new.csv  joint_calibration_jp_old.csv  kuka_palpation_python.csv  one_line.csv  one_line001.csv  one_point_nt.csv  one_point_tumor001.csv  one_point_tumor002.csv  palpation_IKdata_20260326-162740.csv  test.csv
new_tool_calibration/: metadata.yaml
old_tool_data/: calibration_data_raw.csv  joint_calibration_jp_002.csv  line_15mm_001.csv  line_15mm_002.csv  one_line_new_001_20mm.csv  one_line_new_002_20mm.csv  one_point_em_15mm_001.csv  one_point_em_15mm_002.csv  one_point_em_20mm.csv  one_point_tumor_15mm_001.csv  one_point_tumor_15mm_002.csv  one_point_tumor_20mm.csv
oldtool_data/: 12_li_withcap_001.csv  15_deep_line_002.csv  15_grid_withcap_001.csv  15_largegrid_withcap_001.csv  ik_debug.csv  ik_final_grid_air.csv  ik_line_002.csv  ik_small_grid_air.csv  joint_calibration_15mm_001.csv  joint_calibration_15mm_new.csv
onebigline_deep_15wcap_002/: metadata.yaml
onegrid_15wcap/: metadata.yaml
onegrid_large_15wcap/: metadata.yaml
oneline_12wcap/: metadata.yaml
oneline_15wcap/: metadata.yaml
oneline_deep_15wcap/: metadata.yaml
oneline_deep_15wcap_002/: metadata.yaml
src/ndi_aurora_node/: CMakeLists.txt  package.xml
src/ndi_aurora_node/src/: ndi_aurora_publisher.cpp  ndi_aurora_raw_node.cpp
src/netft_reader/: CMakeLists.txt  package.xml
src/netft_reader/include/netft_reader/: netft_rdt_driver.h
src/netft_reader/src/: netft_baseraw_node.cpp  netft_node.cpp  netft_raw_node.cpp  netft_rdt_driver.cpp
src/sync_logger_node/: CMakeLists.txt  package.xml
src/sync_logger_node/launch/: multi_sensor_logger_launch.py
src/sync_logger_node/src/: sync_logger_node.cpp
src/ves_kinematic_calibration/: package.xml  setup.cfg  setup.py
src/ves_kinematic_calibration/ves_kinematic_calibration/: Virtuoso_kinematics.py  cp_calibration.py  force_cp.py  jp_calibration.py  palpation_grid copy 2.py  palpation_grid copy.py  palpation_grid.py  palpation_hover.py  palpation_kuka.cpp  palpation_kuka.py  palpation_nohome.py  ves_cp_publisher_smooth.py  ves_ik_publisher.py  ves_ik_publisher_wforce.py  ves_joint_publisher.py
